// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileModel can build a tile with the given size 1`] = `
TileModel {
  "direction": "right",
  "id": "tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and a ratio of 0.5 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-0.5",
  "ratio": 0.5,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and a ratio of 1 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and a ratio of 2 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and a ratio of 3 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and a ratio of 4 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can build a tile with the given size and direction 1`] = `
TileModel {
  "direction": "left",
  "id": "tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`TileModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`TileModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`TileModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`TileModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `90`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`TileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `90`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 0,
    "x": 100,
    "y": 210,
  },
  "width": 90,
  "x": 55,
  "y": 100,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914856,
  "y": 68.18019484660536,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 0,
    "x": 0,
    "y": 110,
  },
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `
{
  "height": 180,
  "input": {
    "angle": 90,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 90,
    "x": -220,
    "y": 1.3471114790620885e-14,
  },
  "width": 220,
  "x": -220,
  "y": -90,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
{
  "height": 282.842712474619,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": -55.563491861040404,
    "y": 255.5634918610405,
  },
  "width": 282.84271247461896,
  "x": -119.20310216782968,
  "y": 36.36038969321074,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 0,
    "x": 100,
    "y": 210,
  },
  "width": 90,
  "x": 55,
  "y": 100,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914856,
  "y": 68.18019484660536,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 0,
    "x": 0,
    "y": 110,
  },
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `
{
  "height": 180,
  "input": {
    "angle": 90,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 90,
    "x": -220,
    "y": 1.3471114790620885e-14,
  },
  "width": 220,
  "x": -220,
  "y": -90,
}
`;

exports[`TileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
{
  "height": 282.842712474619,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": -55.563491861040404,
    "y": 255.5634918610405,
  },
  "width": 282.84271247461896,
  "x": -119.20310216782968,
  "y": 36.36038969321074,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`TileModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`TileModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`TileModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`TileModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`TileModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`TileModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`TileModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`TileModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `4`;

exports[`TileModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `8`;

exports[`TileModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `12`;

exports[`TileModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `16`;

exports[`TileModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `1`;

exports[`TileModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`TileModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `4`;

exports[`TileModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `4`;

exports[`TileModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `4`;

exports[`TileModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`TileModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `4`;

exports[`TileModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`TileModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `4`;

exports[`TileModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `4`;

exports[`TileModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `100`;

exports[`TileModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `100`;

exports[`TileModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `210`;

exports[`TileModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `320`;

exports[`TileModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `430`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 27.5,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 127.5,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 72.5,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 165,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 265,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": -65,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`TileModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 1`] = `
[
  Vector2D {
    "x": -22.5,
    "y": 0,
  },
  Vector2D {
    "x": 22.5,
    "y": 0,
  },
  Vector2D {
    "x": 22.5,
    "y": 55,
  },
  Vector2D {
    "x": -22.5,
    "y": 55,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 2`] = `
[
  Vector2D {
    "x": 77.5,
    "y": 100,
  },
  Vector2D {
    "x": 122.5,
    "y": 100,
  },
  Vector2D {
    "x": 122.5,
    "y": 155,
  },
  Vector2D {
    "x": 77.5,
    "y": 155,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 77.5,
  },
  Vector2D {
    "x": 100,
    "y": 122.5,
  },
  Vector2D {
    "x": 45,
    "y": 122.5,
  },
  Vector2D {
    "x": 45,
    "y": 77.5,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 1`] = `
[
  Vector2D {
    "x": -90,
    "y": 0,
  },
  Vector2D {
    "x": 90,
    "y": 0,
  },
  Vector2D {
    "x": 90,
    "y": 220,
  },
  Vector2D {
    "x": -90,
    "y": 220,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 2`] = `
[
  Vector2D {
    "x": 10,
    "y": 100,
  },
  Vector2D {
    "x": 190,
    "y": 100,
  },
  Vector2D {
    "x": 190,
    "y": 320,
  },
  Vector2D {
    "x": 10,
    "y": 320,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 10,
  },
  Vector2D {
    "x": 100,
    "y": 190,
  },
  Vector2D {
    "x": -120,
    "y": 190,
  },
  Vector2D {
    "x": -120,
    "y": 10.000000000000014,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 1`] = `
[
  Vector2D {
    "x": -135,
    "y": 0,
  },
  Vector2D {
    "x": 135,
    "y": 0,
  },
  Vector2D {
    "x": 135,
    "y": 330,
  },
  Vector2D {
    "x": -135,
    "y": 330,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 2`] = `
[
  Vector2D {
    "x": -35,
    "y": 100,
  },
  Vector2D {
    "x": 235,
    "y": 100,
  },
  Vector2D {
    "x": 235,
    "y": 430,
  },
  Vector2D {
    "x": -35,
    "y": 430,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 3`] = `
[
  Vector2D {
    "x": 99.99999999999999,
    "y": -35,
  },
  Vector2D {
    "x": 100.00000000000001,
    "y": 235,
  },
  Vector2D {
    "x": -230,
    "y": 235.00000000000003,
  },
  Vector2D {
    "x": -230,
    "y": -34.99999999999997,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 1`] = `
[
  Vector2D {
    "x": -180,
    "y": 0,
  },
  Vector2D {
    "x": 180,
    "y": 0,
  },
  Vector2D {
    "x": 180,
    "y": 440,
  },
  Vector2D {
    "x": -180,
    "y": 440,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 2`] = `
[
  Vector2D {
    "x": -80,
    "y": 100,
  },
  Vector2D {
    "x": 280,
    "y": 100,
  },
  Vector2D {
    "x": 280,
    "y": 540,
  },
  Vector2D {
    "x": -80,
    "y": 540,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 3`] = `
[
  Vector2D {
    "x": 99.99999999999999,
    "y": -80,
  },
  Vector2D {
    "x": 100.00000000000001,
    "y": 280,
  },
  Vector2D {
    "x": -340,
    "y": 280,
  },
  Vector2D {
    "x": -340,
    "y": -79.99999999999997,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 1`] = `
[
  Vector2D {
    "x": -22.5,
    "y": 0,
  },
  Vector2D {
    "x": 22.5,
    "y": 0,
  },
  Vector2D {
    "x": 22.5,
    "y": 55,
  },
  Vector2D {
    "x": -22.5,
    "y": 55,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 2`] = `
[
  Vector2D {
    "x": 77.5,
    "y": 100,
  },
  Vector2D {
    "x": 122.5,
    "y": 100,
  },
  Vector2D {
    "x": 122.5,
    "y": 155,
  },
  Vector2D {
    "x": 77.5,
    "y": 155,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 77.5,
  },
  Vector2D {
    "x": 100,
    "y": 122.5,
  },
  Vector2D {
    "x": 45,
    "y": 122.5,
  },
  Vector2D {
    "x": 45,
    "y": 77.5,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 1`] = `
[
  Vector2D {
    "x": -90,
    "y": 0,
  },
  Vector2D {
    "x": 90,
    "y": 0,
  },
  Vector2D {
    "x": 90,
    "y": 220,
  },
  Vector2D {
    "x": -90,
    "y": 220,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 2`] = `
[
  Vector2D {
    "x": 10,
    "y": 100,
  },
  Vector2D {
    "x": 190,
    "y": 100,
  },
  Vector2D {
    "x": 190,
    "y": 320,
  },
  Vector2D {
    "x": 10,
    "y": 320,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 10,
  },
  Vector2D {
    "x": 100,
    "y": 190,
  },
  Vector2D {
    "x": -120,
    "y": 190,
  },
  Vector2D {
    "x": -120,
    "y": 10.000000000000014,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 1`] = `
[
  Vector2D {
    "x": -135,
    "y": 0,
  },
  Vector2D {
    "x": 135,
    "y": 0,
  },
  Vector2D {
    "x": 135,
    "y": 330,
  },
  Vector2D {
    "x": -135,
    "y": 330,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 2`] = `
[
  Vector2D {
    "x": -35,
    "y": 100,
  },
  Vector2D {
    "x": 235,
    "y": 100,
  },
  Vector2D {
    "x": 235,
    "y": 430,
  },
  Vector2D {
    "x": -35,
    "y": 430,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 3`] = `
[
  Vector2D {
    "x": 99.99999999999999,
    "y": -35,
  },
  Vector2D {
    "x": 100.00000000000001,
    "y": 235,
  },
  Vector2D {
    "x": -230,
    "y": 235.00000000000003,
  },
  Vector2D {
    "x": -230,
    "y": -34.99999999999997,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 1`] = `
[
  Vector2D {
    "x": -180,
    "y": 0,
  },
  Vector2D {
    "x": 180,
    "y": 0,
  },
  Vector2D {
    "x": 180,
    "y": 440,
  },
  Vector2D {
    "x": -180,
    "y": 440,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 2`] = `
[
  Vector2D {
    "x": -80,
    "y": 100,
  },
  Vector2D {
    "x": 280,
    "y": 100,
  },
  Vector2D {
    "x": 280,
    "y": 540,
  },
  Vector2D {
    "x": -80,
    "y": 540,
  },
]
`;

exports[`TileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 3`] = `
[
  Vector2D {
    "x": 99.99999999999999,
    "y": -80,
  },
  Vector2D {
    "x": 100.00000000000001,
    "y": 280,
  },
  Vector2D {
    "x": -340,
    "y": 280,
  },
  Vector2D {
    "x": -340,
    "y": -79.99999999999997,
  },
]
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 220,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 320,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -120,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 330,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 430,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -230,
  "y": 100.00000000000001,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 440,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 540,
}
`;

exports[`TileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -340,
  "y": 100.00000000000003,
}
`;

exports[`TileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `180`;

exports[`TileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `180`;

exports[`TileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `180`;

exports[`TileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `180`;

exports[`TileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `180`;

exports[`TileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`TileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`TileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`TileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`TileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`TileModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`TileModel can compute the side of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`TileModel can compute the side of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`TileModel can compute the side of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`TileModel can compute the side of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `"rotate(180 100 155)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `"rotate(45 100 100)rotate(180 100 155)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `"rotate(180 0 55)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `"rotate(90 0 0)rotate(180 0 110)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `"rotate(45 100 100)rotate(180 100 210)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `""`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `"rotate(45 100 100)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `""`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `"rotate(90 0 0)"`;

exports[`TileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `"rotate(45 100 100)"`;

exports[`TileModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
{
  "direction": "left",
  "ratio": 1,
  "type": "tile",
}
`;

exports[`TileModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
{
  "direction": "left",
  "ratio": 2,
  "type": "tile",
}
`;

exports[`TileModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
{
  "direction": "right",
  "ratio": 1,
  "type": "tile",
}
`;

exports[`TileModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
{
  "direction": "right",
  "ratio": 2,
  "type": "tile",
}
`;
